2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add ceil, floor, nearbyint, round,
	roundeven, and trunc tests.
	* tests/ceil.input: New file: ceil new test input.
	* tests/floor.input: New file: floor new test input.
	* tests/nearbyint.input: New file: nearbyint new test input.
	* tests/round.input: New file: round new test input.
	* tests/roundeven.input: New file: roundeven new test input.
	* tests/trunc.input: New file: trunc new test input.
	* tests/test-rounding.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add quantum new tests.
	* tests/quantum.input: New file: quantum new tests input.
	* tests/test-quantum.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add ilogb new tests.
	* tests/ilogb.input: New file: ilogb new tests input.
	* tests/llogb.input: New file: llogb new tests input.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add issignaling new tests.
	* tests/issignaling.input: New file: issignaling new tests input.
	* tests/test-issignaling.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_test): Add isnan, isinf, and isfinite new
	tests.
	* tests/isfinite.input: New file: isfinite new test input.
	* tests/isnan.input: New file: isnan new test input.
	* tests/isinf.input: New file: isinf new test input.
	* tests/test-isfinite.c: Remove.
	* tests/test-isnan.c: Remove.
	* tests/test-isinf.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add llquantexp new tests.
	* tests/llquantexp.input: New file: llquantexp new tests input.
	* tests/test-llquantexp.c: Remove.

2013-02-26  Adhemerval Zanella  <azanella@linux.vnet.ibm.com>

	* Makefile.in (libdfp_c_tests): Add logb new tests.
	* tests/logb.input: New file: logb new tests input.
